--- a/templates/funcionamento.html
+++ b/templates/funcionamento.html
@@ -103,7 +103,7 @@
     </tbody>
   </table>
 
-  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="www.proseculo.com.br">www.proseculo.com.br.</a></p>
+  <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="https://www.proseculo.com.br/" target="_blank">www.proseculo.com.br.</a></p>
 
 <table class="table table-sm table-hover table-bordered" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
@@ -115,23 +115,23 @@
     <tbody>
       <tr>
         <th scope="row" style="text-align: center; ">Maternal Grupos 1</th>
-        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1RfzdvwrxsVSca9P3oy6LT2aOklpGsb2KhLf9Ez6yh-w/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1RfzdvwrxsVSca9P3oy6LT2aOklpGsb2KhLf9Ez6yh-w/edit?usp=sharing" target="_blank">Link</a></td>
       </tr>
       <tr>
         <th scope="row"  style="text-align: center;">Maternal Grupo 2</th>
-        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1ctqg3dOU3Pak2lMcboSLt1BoLbTsjyKs3j1234D9H20/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1ctqg3dOU3Pak2lMcboSLt1BoLbTsjyKs3j1234D9H20/edit?usp=sharing" target="_blank">Link</a></td>
       </tr>
       <tr>
         <th scope="row" style="text-align: center;">Maternal Grupo 3</th>
-        <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1aaawWfODxZAwHZG8aBN3yxDHrAHVvsPHc4Xb2zJ4vvs/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1aaawWfODxZAwHZG8aBN3yxDHrAHVvsPHc4Xb2zJ4vvs/edit?usp=sharing" target="_blank">Link</a></td>
        </tr>
        <tr>
         <th scope="row" style="text-align: center;">Jardim 1</th>
-        <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1KX6D7mzNrbg7tTP9OM-TEp0d-1ciJ-ByIX-VoTeXdFI/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1KX6D7mzNrbg7tTP9OM-TEp0d-1ciJ-ByIX-VoTeXdFI/edit?usp=sharing" target="_blank">Link</a></td>
        </tr>
        <tr>
         <th scope="row" style="text-align: center;">Jardim 2</th>
-        <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1JmFyfMlZnTr9VGFk6GWN5kG3FZjx6Zmv7apThNRfQec/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1JmFyfMlZnTr9VGFk6GWN5kG3FZjx6Zmv7apThNRfQec/edit?usp=sharing" target="_blank">Link</a></td>
        </tr>
     </tbody>
   </table>
@@ -232,35 +232,35 @@
         <tbody>
           <tr>
             <th scope="row" style="text-align: center; ">1º ano</th>
-            <td style="text-align: center;"><a href="https://docs.google.com/document/d/1y7xaJ8Ff4w4mBtZYlbonT2bwa6sH_fhdmF-EhHC5etQ/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center;"><a href="https://docs.google.com/document/d/1y7xaJ8Ff4w4mBtZYlbonT2bwa6sH_fhdmF-EhHC5etQ/edit?usp=sharing" target="_blank">Link</a></td>
           </tr>
           <tr>
             <th scope="row"  style="text-align: center;">2º ano</th>
-            <td style="text-align: center;"><a href="https://docs.google.com/document/d/1G9xF75yd8reZPdU8v7d15xFG1bTX60oeGxleLtlUvUA/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center;"><a href="https://docs.google.com/document/d/1G9xF75yd8reZPdU8v7d15xFG1bTX60oeGxleLtlUvUA/edit?usp=sharing" target="_blank">Link</a></td>
           </tr>
           <tr>
             <th scope="row" style="text-align: center;">3º ano</th>
-            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/11w_7mGoRd72B2sBoecbMUsGXVipE40uRDYzj2qCpFRE/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/11w_7mGoRd72B2sBoecbMUsGXVipE40uRDYzj2qCpFRE/edit?usp=sharing" target="_blank">Link</a></td>
            </tr>
            <tr>
             <th scope="row" style="text-align: center;">4º ano</th>
-            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1mSUzJwziag9aIO8HUql2iZ95cCYf7CstbCYVa1oCJOA/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1mSUzJwziag9aIO8HUql2iZ95cCYf7CstbCYVa1oCJOA/edit?usp=sharing" target="_blank">Link</a></td>
            </tr>
            <tr>
             <th scope="row" style="text-align: center;">5º ano</th>
-            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1TP4PFfOxqdSRyZm7z2fG4CDIxxHm4m2tTpnV-Et3Lm8/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1TP4PFfOxqdSRyZm7z2fG4CDIxxHm4m2tTpnV-Et3Lm8/edit?usp=sharing" target="_blank">Link</a></td>
            </tr>
            <tr>
             <th scope="row" style="text-align: center;">6º ano</th>
-            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1_TMACi-aZJNjv1PIlCi1u3g3yG7fa9im8_hJGkh1Vn8/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1_TMACi-aZJNjv1PIlCi1u3g3yG7fa9im8_hJGkh1Vn8/edit?usp=sharing" target="_blank">Link</a></td>
            </tr>
            <tr>
             <th scope="row" style="text-align: center;">7º ano</th>
-            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1uPHgCry2WqgYdKcjeD_5NKRtqg0AlsrLfZEYcAXV-f4/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1uPHgCry2WqgYdKcjeD_5NKRtqg0AlsrLfZEYcAXV-f4/edit?usp=sharing" target="_blank">Link</a></td>
            </tr>
            <tr>
             <th scope="row" style="text-align: center;">8º ano</th>
-            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1U4VIJhW-irkqxaYuCJEZBUnHwmKSdC6Oa9Gp4mEKPeg/edit?usp=sharing">Link</a></td>
+            <td style="text-align: center; padding: 0;"><a href="https://docs.google.com/document/d/1U4VIJhW-irkqxaYuCJEZBUnHwmKSdC6Oa9Gp4mEKPeg/edit?usp=sharing" target="_blank">Link</a></td>
            </tr>
         </tbody>
       </table>
@@ -320,7 +320,7 @@
           </tbody>
         </table>
 
-        <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="www.proseculo.com.br">www.proseculo.com.br.</a></p>
+        <p class="fw-bold" style="margin-left: 7%; font-size: 12px; margin-top: 0; margin-bottom: 0;">Os livros são vendidos pela Editora Positivo na loja virtual: <a href="https://www.proseculo.com.br/ " target="_blank">www.proseculo.com.br.</a></p>
 
 <table class="table table-sm table-hover table-bordered" border="2" style="max-width: 30%; margin-left: 7%; margin-bottom: 50px;">
     <thead>
@@ -332,11 +332,11 @@
     <tbody>
       <tr>
         <th scope="row" style="text-align: center; ">9º ano Pré-Médio</th>
-        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1tOSPUFhL3eLKHT4GGvRf7IQSJ8n3JwnU8Pv10k0AdnY/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1tOSPUFhL3eLKHT4GGvRf7IQSJ8n3JwnU8Pv10k0AdnY/edit?usp=sharing" target="_blank">Link</a></td>
       </tr>
       <tr>
         <th scope="row"  style="text-align: center;">Ensino Médio (1ª à 3ª série)</th>
-        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1E_LjwP8My9tkFWVh5dt5KPLkudZD2m6S-YM2wNvpXVA/edit?usp=sharing">Link</a></td>
+        <td style="text-align: center;"><a href="https://docs.google.com/document/d/1E_LjwP8My9tkFWVh5dt5KPLkudZD2m6S-YM2wNvpXVA/edit?usp=sharing" target="_blank">Link</a></td>
       </tr>
       <tr>
     </tbody>
@@ -385,6 +385,6 @@
     </tbody>
   </table>
 
-  <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 3%;">Outras informações sobre Vestibular, Transferência, 2ª Graduação, Pós-Graduação, entre outros, acesse <a href="https://www.faculdadecci.com.br/">https://www.faculdadecci.com.br</a></p>
+  <p class="fs-6 fw-bold" style="margin-left: 7%; margin-top: 2%; margin-bottom: 3%;">Outras informações sobre Vestibular, Transferência, 2ª Graduação, Pós-Graduação, entre outros, acesse <a href="https://www.faculdadecci.com.br/" target="_blank">https://www.faculdadecci.com.br</a></p>
 
 {% endblock conteudo %}
