--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -16,6 +16,7 @@
         <h6 class="card-title text-center">Calendário Escolar 2023</h6>
         <p class="card-text text-center">Informações Detalhadas</p>
       </div>
+      <a href="https://calendar.google.com/calendar/embed?src=agenda%40portalcci.com.br&ctz=America%2FBelem" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
