--- a/templates/biblioteca.html
+++ b/templates/biblioteca.html
@@ -39,4 +39,10 @@
             <p>Conheça o nosso acervo e aprimore os seus conhecimentos!</p>
         </div>
     </div>
+
+<div class="text-right">
+<a href="https://biblioteca.sophia.com.br/terminal/8832/" target="_blank">
+    <img src="https://docs.google.com/uc?id=17QhngtDZsNBbRPWV_jOP9PUuX2wYY2lQ" style="max-width: 250px;" class="img-fluid"/> 
+</a>
+</div>
 {% endblock conteudo %}
