--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -31,12 +31,12 @@
   </div>
   <div class="col">
     <div class="card h-100" style="max-width:250px; max-height:300px; margin:auto;">
-      <img src="https://docs.google.com/uc?id=18LE5_F-CFD_A4BC4Q3xb-NtYsOY3oojT" class="card-img-top"/>
+      <img src="https://docs.google.com/uc?id=1GJ9TJspmnLmj_gBgexSvZqS6ndtoueHO" class="card-img-top"/>
       <div class="card-body">
-        <h6 class="card-title text-center">Horário de Atendimento</h6>
-        <p class="card-text text-center">Informações de horários</p>
+        <h6 class="card-title text-center">Loja CCI</h6>
+        <p class="card-text text-center">Venda de Produtos CCI</p>
       </div>
-      <a href="#!" class="stretched-link"></a>
+      <a href="https://lojacci.dooca.store/" target="_blank" class="stretched-link"></a>
   </div>
   </div>
   <div class="col">
@@ -46,7 +46,7 @@
         <h6 class="card-title text-center">Materiais Escolar 2023</h6>
         <p class="card-text text-center">Lista de Materias</p>
       </div>
-      <a href="https://drive.google.com/drive/folders/1d0g6JYd33IsvOmstmR5rFlF0IW6VeuqE?usp=sharing" class="stretched-link"></a>
+      <a href="https://drive.google.com/drive/folders/1d0g6JYd33IsvOmstmR5rFlF0IW6VeuqE?usp=sharing " target="_blank" class="stretched-link"></a>
   </div>
   </div>
 
@@ -61,7 +61,7 @@
         <h6 class="card-title text-center">Pré Inscrição PEC</h6>
         <p class="card-text text-center">Pré-inscrição para os Projetos Extracurriculares</p>
       </div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_IqyClhGGaQfjVZO_QK4-tnvAIiLsql8Y3LC7-7BdM7bATA/viewform" class="stretched-link"></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_IqyClhGGaQfjVZO_QK4-tnvAIiLsql8Y3LC7-7BdM7bATA/viewform" target="_blank" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
@@ -81,7 +81,7 @@
         <h6 class="card-title text-center" >SAC CCI</h6>
         <p class="card-text text-center">Solicitações, Dúvidas, reclamações e sugestão</p>
       </div>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdrtLsH48jWkl2p15cjw-56xdATsbC8eSlU98KYP1AWfyOCOA/viewform?gxids=7628" class="stretched-link"></a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdrtLsH48jWkl2p15cjw-56xdATsbC8eSlU98KYP1AWfyOCOA/viewform?gxids=7628" target="_blank" class="stretched-link"></a>
     </div>
   </div>
   <div class="col">
