--- a/templates/niveisEnsino.html
+++ b/templates/niveisEnsino.html
@@ -76,7 +76,7 @@
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="https://www.tecscci.com.br/">
+                <a href="https://www.tecscci.com.br/" target="_blank">
                     <div class="tec2 img-fluid hover-zoom"> <img
                             src="{{ url_for('static', filename='../static/img/TÉCNICO.png') }}" class="w-100"
                             style="height:500px; width:200px;">
@@ -88,7 +88,7 @@
 
             </div>
             <div class="col-md-2">
-                <a href="https://www.faculdadecci.com.br/">
+                <a href="https://www.faculdadecci.com.br/" target="_blank">
                     <div
                         class="hover-zoom img-fluid align-items-center justify-content-center text-center justify-content-center">
                         <img src="https://docs.google.com/uc?id=1cVDorck6rGIY6gUbPGsor-jS7JW--H9O" class="w-100"
