--- a/templates/institucional.html
+++ b/templates/institucional.html
@@ -44,12 +44,12 @@
 <div class="container" style="margin-top: 90px;">
 		<div class="row ">
 			<div class="col">
-				<div class="card align-items-center" style="width: 18rem;">
+				<div class="card align-items-center" style="width: 15em; height: 446.6px;">
 					<img src="../static/img/missao-removebg-preview.png" class="card-img-top" alt="Sunset Over the Sea"
-						style="height: 120px; width: 120px; margin-top: 20px; margin-bottom: 5%;" />
+						style="height: 90px; width: 60px; margin-top: 20px;"/>
 					<div class="card-body" style="text-align: center;">
 						<h1>Missão</h1>
-						<p class="card-text">
+						<p class="card-text" style="text-align: justify;">
 							Figurar entre as melhores instituições de ensino da Região Centro-Oeste, sendo reconhecida
 							por formar
 							cidadãos críticos e autônomos, bem como fornecer-lhes a base acadêmica necessária ao
@@ -61,9 +61,9 @@
 				</div>
 			</div>
 			<div class="col">
-				<div class="card align-items-center" style="width: 18rem; height: 446.6px;">
+				<div class="card align-items-center" style="width: 15rem; height: 446.6px;">
 					<img src="./static/img/valores.png" class="card-img-top" alt="Sunset Over the Sea"
-						style="height: 120px; width: 120px; margin-top: 20px;" />
+						style="height: 70px; width: 70px; margin-top: 20px;" />
 					<div class="card-body" style="text-align: center;">
 						<h1>Valores</h1>
 						<p class="card-text">
@@ -76,9 +76,9 @@
 				</div>
 			</div>
 			<div class="col">
-				<div class="card align-items-center" style="width: 18rem; height: 446.6px;">
+				<div class="card align-items-center" style="width: 15rem; height: 446.6px;">
 					<img src="./static/img/visao.png" class="card-img-top" alt="Sunset Over the Sea"
-						style="height: 120px; width: 110px; margin-top: 20px;" />
+						style="height: 70px; width: 70px; margin-top: 20px;" />
 					<div class="card-body" style="text-align: center;">
 						<h1>Visão</h1>
 						<p class="card-text">
@@ -88,6 +88,20 @@
 						</p>
 					</div>
 					<a href="{{url_for('principios')}}" class="stretched-link"></a>
+				</div>
+			</div>
+
+			<div class="col">
+				<div class="card align-items-center" style="width: 15rem; height: 446.6px;">
+					<img src="https://docs.google.com/uc?id=1BTWZGRw5JG34Q8cZUr_qZ-HtnmRP7Owe" class="card-img-top" alt="Sunset Over the Sea"
+						style="height: 70px; width: 70px; margin-top: 20px;" />
+					<div class="card-body" style="text-align: center;">
+						<h1>Tour Virtual</h1>
+						<p class="card-text">
+							Faça um tour virtual por nossas instalações.
+						</p>
+					</div>
+					<a href="https://www.google.com/maps/uv?pb=!1s0x935bcd5f3659efbb%3A0xdf20e8a46bd89fd9!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMmiL4qnlaW4TP5jVVblanvsvAhRPCt5n5YOhV5%3Dw86-h87-n-k-no!5scol%C3%A9gio%20cci%20-%20Pesquisa%20Google!15sCgIgARICCAI&imagekey=!1e10!2sAF1QipMPD3Z5nK-Rr27PM38MChrQvJMoRRfJmb-yyrqx" target="_blank" class="stretched-link"></a>
 				</div>
 			</div>
 		</div>
