--- a/templates/base.html
+++ b/templates/base.html
@@ -217,6 +217,9 @@
                         <p>
                             <a href="https://www.tecscci.com.br/" class="text-reset">Técs</a>
                         </p>
+                        <p>
+                            <a href="https://www.faculdadecci.com.br/" class="text-reset">Faculdade</a>
+                        </p>
                     </div>
                     <!-- Grid column -->
 
@@ -240,6 +243,12 @@
                         </p>
                         <p>
                             <a href="{{url_for('secretaria')}}" class="text-reset">Secretaria</a>
+                        </p>
+                        <p>
+                            <a href="{{url_for('fale_conosco')}}" class="text-reset">Fale Conosco</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Trabalhe Conosco</a>
                         </p>
                     </div>
                     <!-- Grid column -->
