--- a/templates/secretaria.html
+++ b/templates/secretaria.html
@@ -2,7 +2,7 @@
 {% block conteudo %}
 
 <div class="text-center" style="margin-bottom:100px;">
-  <img src="{{ url_for('static', filename='../static/img/banner.jpg') }}" class="img-fluid" alt=""/>
+  <img src="{{ url_for('static', filename='../static/img/secretaria.png') }}" class="img-fluid" alt=""/>
 </div>
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -91,6 +91,8 @@
         <h5 class="card-title text-center">Vendas de Livros</h5>
         <p class="card-text text-center">Venda de livros Editora Positivo </p>
       </div>
+      <a href="https://loja.proseculo.com.br/convenios/cci-50" target="_blank" class="stretched-link"></a>
+   
   </div>
   </div>
 
