--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -36,6 +36,8 @@
 <br>
 <br>
 
+<p class="fs-1 fw-bold" style="text-align: center; margin-bottom: 40px;">Destaques</p>
+
 <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom:50px; margin-left:75px; margin-right:75px;">
 
   <div class="col">
@@ -86,5 +88,11 @@
   
 </div>
 
+<div class="text-center">
+  <img
+    src="https://docs.google.com/uc?id=1FZqUjMYHuSj1KVoEWDQj8Nzg4k8XstrH"
+    class="img-fluid hover-shadow" style="max-width: 55%; margin-bottom: 5%;"
+/>
+</div>
 
 {% endblock conteudo %}
