--- a/templates/base.html
+++ b/templates/base.html
@@ -140,6 +140,17 @@
     <!-- conteudo -->
 
 
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>    
+    
         {% block conteudo %}
 
 
