--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,10 +4,10 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ url_for('static', filename='../static/img/banner-cci.jpg') }}" class="d-block w-100">
+      <img src="https://docs.google.com/uc?id=1Efe32xVVkCpUNKvSV8z4JZ_x06RTYzXZ" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="{{ url_for('static', filename='../static/img/banner.jpg') }}" class="d-block w-100">
+      <img src="https://docs.google.com/uc?id=1C0ZKmZ4kW83hiNEZI9-l8fNA3pHk6GRg" class="d-block w-100">
     </div>
     <div class="carousel-item">
       <img src="{{ url_for('static', filename='../static/img/banner.jpg') }}" class="d-block w-100">
