--- a/templates/niveisEnsino.html
+++ b/templates/niveisEnsino.html
@@ -78,7 +78,7 @@
             <div class="col-md-2">
                 <a href="https://www.tecscci.com.br/" target="_blank">
                     <div class="tec2 img-fluid hover-zoom"> <img
-                            src="{{ url_for('static', filename='../static/img/TÉCNICO.png') }}" class="w-100"
+                            src="https://docs.google.com/uc?id=1zo4UQRMAGd158UvzOdGordZK9vEjA-AT" class="w-100"
                             style="height:500px; width:200px;">
                     </div>
                     <blockquote class="blockquote fixed-bottom position-absolute titutec">
@@ -91,7 +91,7 @@
                 <a href="https://www.faculdadecci.com.br/" target="_blank">
                     <div
                         class="hover-zoom img-fluid align-items-center justify-content-center text-center justify-content-center">
-                        <img src="https://docs.google.com/uc?id=1cVDorck6rGIY6gUbPGsor-jS7JW--H9O" class="w-100"
+                        <img src="https://docs.google.com/uc?id=12M1t5_xG0iwBtSm5gxnI5vmboz609s25" class="w-100"
                             style="height:500px; width:200px;"> 
                     </div>
                     <blockquote class="blockquote fixed-bottom position-absolute titufac">
