--- a/templates/ed-infantil.html
+++ b/templates/ed-infantil.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="text-center" style="margin-bottom:50px;">
-  <img src="{{ url_for('static', filename='../static/img/abc.jpg') }}" class="img-fluid" alt=""/>
+  <img src="https://docs.google.com/uc?id=1yh0q2YO-ZIkBVO4DzPtp04xHD2GQaXgv" class="img-fluid" alt=""/>
 </div>
 <div style="margin-left:7%; margin-right:7%;">
 <p class="blockquote text-break" style="text-align: justify;">  <small> No CCI, a Educação Infantil atende crianças de 2 a 5 anos. Essa fase é um dos momentos mais fantásticos e de maior aprendizagem do ser humano. Para as crianças, tudo é novidade. E a escola, claro, é o berço que inicia o crescimento e as descobertas que realizam em cada experiência, simples ou complexa, que vivenciam. Também nesse período, elas desenvolvem diferentes tipos de linguagem que facilitam o conhecimento de mundo e a comunicação com seus pares no conviver, brincar, explorar, expressar e se conhecer. Além do que, aprendem com os estímulos que recebem. Com isso, são trabalhados os aspectos cognitivo, afetivo e psicomotor, cujo foco é o aprimoramento da oralidade, da coordenação motora e da socialização, quesitos indispensáveis em todo o processo de alfabetização. Dessa forma, os pequenos ainda são motivados a desenvolverem a autoconfiança e a ampliarem suas relações sociais, num contexto totalmente lúdico e construtivo. </small></p>
