--- a/templates/ensino-medio.html
+++ b/templates/ensino-medio.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="text-center" style="margin-bottom:50px;">
-  <img src="{{ url_for('static', filename='../static/img/abc.jpg') }}" class="img-fluid" alt=""/>
+  <img src="https://docs.google.com/uc?id=1P0ryKPWZcJpQsoLrdDIFUpzT_fBvIQw2" class="img-fluid" alt=""/>
 </div>
 <div style="margin-left:7%; margin-right: 7%;">
 <p class="blockquote text-break" style="text-align: justify;"> <small> No CCI Sênior, temos a finalidade de desenvolver e estimular o protagonismo dos estudantes para que se tornem cidadãos conscientes, críticos, criativos e autônomos, capazes de enfrentar diversos desafios, inter e intrapessoal, e atuar na sociedade como agentes da PAZ e do BEM.</small></p>
