--- a/templates/niveisEnsino.html
+++ b/templates/niveisEnsino.html
@@ -47,7 +47,7 @@
             <div class="col-md-2">
                 <a href="{{url_for('educacao_infantil')}}">
                     <div class="hover-zoom img-fluid"> <img
-                            src="{{ url_for('static', filename='../static/img/ED.png') }}" class="w-100"
+                            src="https://docs.google.com/uc?id=1Xm7_M7aY8YVMYI2XlofD9a7HUGhK27qY" class="w-100"
                             style="height:500px; width:200px;">
                     </div>
                     <blockquote class="blockquote fixed-bottom position-absolute tituei">
@@ -57,7 +57,7 @@
             <div class="col-md-2">
                 <a href="{{url_for('ensino_fundamental')}}">
                     <div class="hover-zoom img-fluid"> <img
-                            src="{{ url_for('static', filename='../static/img/EF.png') }}" class="w-100"
+                            src="https://docs.google.com/uc?id=1MvgKs5z-caYwiCb0cb_m0fkJAfPeCN1B" class="w-100"
                             style="height:500px; width:200px;">
                     </div>
                     <blockquote class="blockquote fixed-bottom position-absolute tituem">
@@ -68,7 +68,7 @@
             <div class="col-md-2 ">
                 <a href="{{url_for('ensino_medio')}}">
                     <div class="hover-zoom img-fluid"> <img
-                            src="{{ url_for('static', filename='../static/img/EM.png') }}" class="w-100"
+                            src="https://docs.google.com/uc?id=18IvzhdNzEQxXJCr6hvLJ6Iq1aewH1HvD" class="w-100"
                             style="height:500px; width:200px;">
                     </div>
                     <blockquote class="blockquote fixed-bottom position-absolute tituem">
