--- a/templates/niveisEnsino.html
+++ b/templates/niveisEnsino.html
@@ -9,8 +9,8 @@
 
     .titutec, .titufund, .tituem , .titufac, .tituei{
         font-family: 'Montserrat', sans-serif;
-        -webkit-text-stroke: 1px rgb(5, 5, 5);
-        color: transparent;
+        -webkit-text-stroke: 1px rgb(3, 3, 3);
+        color: rgba(240,255,255, .3);
         font-family: var(--titulo);
         font-weight: bold;
         text-transform: uppercase;
