--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,8 @@
                             <img src="{{ url_for('static', filename='../static/img/logo_cci-removebg-preview.png') }}" height="35" />
                         </a>
                         <button type="button" class="btn btn-primary btn-rounded btn-sm" style="margin-left:90px; max-height: 40px; max-width: 200px;">Pré Matricula</button>
-                        
+                        <button type="button" class="btn btn-primary btn-rounded btn-sm" style="margin-left:10px; max-height: 40px; max-width: 200px;">Agendar Visita</button>
+
                     </div>
 
                     <div class="col-md-4">
