--- a/templates/institucional.html
+++ b/templates/institucional.html
@@ -93,7 +93,7 @@
 
 			<div class="col">
 				<div class="card align-items-center" style="width: 15rem; height: 446.6px;">
-					<img src="https://docs.google.com/uc?id=1BTWZGRw5JG34Q8cZUr_qZ-HtnmRP7Owe" class="card-img-top" alt="Sunset Over the Sea"
+					<img src="./static/img/virtual-tour.png" class="card-img-top"
 						style="height: 70px; width: 70px; margin-top: 20px;" />
 					<div class="card-body" style="text-align: center;">
 						<h1>Tour Virtual</h1>
